Fix plotly modebar z-index too high

--- a/src/styles.css
+++ b/src/styles.css
@@ -23,3 +23,7 @@
 div.plotly-notifier {
     visibility: hidden;
 }
+
+.js-plotly-plot .plotly .modebar {
+    z-index: 2 !important;
+}
